@@ -175,7 +175,7 @@ Runtime Configuration
 The `s3qlctrl` can be used to control a mounted S3QL file system. Its
 syntax is ::
 
- s3qlctrl [options] <action> <mountpoint>
+ s3qlctrl [options] <action> <mountpoint> ...
 
 `<mountpoint>` must be the location of a mounted S3QL file system. 
 For a list of valid options, run `s3qlctrl --help`. `<action>`
@@ -184,7 +184,11 @@ may be either of:
   :flushcache:
               Flush file system cache. The command blocks until the cache has
               been flushed.
-  :stacktrace:  Dump stack trace for all active threads into logfile. This is for
-              debugging purposes only.
+  :log:
+              Change log level.
+  :cachesize:
+              Change file system cache size.
+  :upload-meta:
+              Trigger a metadata upload. 
 
 
